Prevent comment card text from going over the borders by allowing text wrapping

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -28,9 +28,10 @@ hidden {
   max-width: 250px;
 }
 
-ul {
-  list-style-type: none;
+.list-group-item {
+   word-wrap: break-word; 
 }
+
 .selector-for-some-widget {
   box-sizing: content-box;
 }
